2010-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove support for old UNIX System V systems.
	* s/unixware.h: Add the contents of s/usg-5-4-2.h.
	* s/usg-5-4-2.h: Remove.

	Remove support for Solaris on PPC and for old versions.
	* s/sol2-6.h: Add the contents of s/sol-2.3.h, s/sol-2.4.h, s/sol-2.5.h.
	(LD_SWITCH_SYSTEM, USE_MMAP_FOR_BUFFERS): Remove #defines/#undef
	that cancel each other.
	* s/sol2-3.h:
	* s/sol2-4.h:
	* s/sol2-5.h: Remove.
	* m/ibmrs6000.h: Remove code for USG5_4, this file is only used on AIX.
	(NO_REMAP): Remove, unused.
	(UNEXEC): Move definition ...
	* s/aix4-2.h (UNEXEC): ... here.

	* s/openbsd.h: Remove support for non-ELF and for systems that do
	not support shared libraries.
	* s/netbsd.h:
	* s/freebsd.h: Likewise.

2010-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove non-working support for lynxos 3.0.
	* s/lynxos.h: Remove file.

	* unexec.c (unexec, adjust_lnnoptrs): Do not depend on
	COFF_BSD_SYMBOLS, nothing defines it anymore.

2010-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove obsolete uses of HAVE_SHM.
	* emacs.c (standard_args):
	(Fdump_emacs):
	(syms_of_emacs): Remove code depending on HAVE_SHM.

	* alloc.c: Remove HAVE_SHM dependent definition.

	* Makefile.in (RUN_TEMACS): Do not depend on HAVE_SHM.

2010-03-18  Glenn Morris  <rgm@gnu.org>

	* emacs.c (USAGE4): Hard-code bug address.
	(REPORT_EMACS_BUG_ADDRESS, REPORT_EMACS_BUG_PRETEST_ADDRESS): Remove.
	(bug_reporting_address): Remove.
	(main): Don't call bug_reporting_address.

	* Makefile.in (XFT_LIBS, LIBXPM, LIBJPEG, LIBPNG, LIBTIFF, LIBGIF)
	(LIBGPM, LIBRESOLV): Set using autoconf rather than cpp.

2010-03-15  Chong Yidong  <cyd@stupidchicken.com>

	* xfns.c (Fx_create_frame):
	* frame.c (Vdefault_frame_scroll_bars): Put non-GTK X scroll-bars
	on left.

2010-03-13  Andreas Politz  <politza@fh-trier.de>  (tiny change)

	* editfns.c (Fformat): Account for string precision when computing
	field width (Bug#5710).

2010-03-12  Chong Yidong  <cyd@stupidchicken.com>