@@ -63,13 +63,7 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
 
 /* Special hacks needed to make Emacs run on this system.  */
 
-/*
- *	Make the sigsetmask function go away.  Don't know what the
- *	ramifications of this are, but doesn't seem possible to
- *	emulate it properly anyway at this point.
- */
-
-#define sigsetmask(mask)	/* Null expansion */
+#define POSIX_SIGNALS
 
 /* setjmp and longjmp can safely replace _setjmp and _longjmp,
    but they will run slower.  */
@@ -175,27 +169,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
 /* This sets the name of the master side of the PTY. */
 
 #define PTY_NAME_SPRINTF strcpy (pty_name, "/dev/ptmx");
-
-/* This sets the name of the slave side of the PTY.  On SysVr4,
-   grantpt(3) forks a subprocess, so keep sigchld_handler() from
-   intercepting that death.  If any child but grantpt's should die
-   within, it should be caught after sigrelse(2). */
-
-#define PTY_TTY_NAME_SPRINTF				\
-  {							\
-    char *ptsname (), *ptyname;				\
-							\
-    sighold (SIGCLD);					\
-    if (grantpt (fd) == -1)				\
-      { emacs_close (fd); return -1; }			\
-    sigrelse (SIGCLD);					\
-    if (unlockpt (fd) == -1)				\
-      { emacs_close (fd); return -1; }			\
-    if (!(ptyname = ptsname (fd)))			\
-      { emacs_close (fd); return -1; }			\
-    strncpy (pty_name, ptyname, sizeof (pty_name));	\
-    pty_name[sizeof (pty_name) - 1] = 0;		\
-  }
 
 /* Push various streams modules onto a PTY channel. */
 
